--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,10 @@
         <hibernate.version>4.3.11.Final</hibernate.version>
         <commons.lang.version>2.6</commons.lang.version>
         <freemarker.version>2.3.23</freemarker.version>
-        <start-class>com.topcom.WebserviceYuqingApplication</start-class>
+        <start-class>com.mxl.Application</start-class>
         <freemarker.version>2.3.23</freemarker.version>
         <docker.image.prefix>192.168.1.12:5000</docker.image.prefix>
-        <docker.image.version>v4.0</docker.image.version>
+        <docker.image.version>v1.0</docker.image.version>
     </properties>
 
     <dependencies>
